<resources>

    <string-array name="kategori">
        <item>Fotografi</item>
        <item>Kendaraan</item>
        <item>Permainan</item>
        <item>Peralatan outdoor</item>
        <item>Fashion</item>
        <item>Lain lain</item>
    </string-array>

    <string name="app_name">Zona Rental</string>
    <string name="tulisan_button">Tulisan Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">Kategori Barang Rental</string>
    <string name="rekomendasi_barang">Rekomendasi Barang</string>
    <string name="no_telp">No Telp</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="edit_foto">Edit Foto</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="status_penyewa">Status Penyewa</string>
    <string name="pemilik_barang">Pemilik Barang</string>
    <string name="fashion">Fashion</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="permainan">Permainan</string>
    <string name="fotografi">Fotografi</string>
    <string name="peralatan_outdoor">Peralatan Outdoor</string>
    <string name="lain_lain">Lain Lain</string>
    <string name="cari_barang_rentalmu_disini">Cari barang rentalmu disini..</string>
    <string name="bayar">Bayar</string>
    <string name="title_activity_jajal">jajalActivity</string>
    <string name="title_activity_auth">authActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tambah_gambar_barang">Tambah Gambar Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="isi_deskripsi_barang">Isi Deskripsi Barang</string>
    <string name="rentalin_barang">Rentalin Barang</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="invinity_dev">Invinity Dev</string>
    <string name="alamatDefault">Ds. Klahang RT 05 RW 02 No 08, Sokaraja Banyumas</string>
    <string name="admob_app_id">ca-app-pub-3251522909904904~6459332883</string>
    <string name="admob_interstisial_id">ca-app-pub-3251522909904904/1913583212</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="title_activity_barang">BarangActivity</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="contoh_deskripsi">Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi Ini contoh deskripsi</string>
    <string name="perental">Perental</string>
</resources>
