<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_slider"
            android:background="@color/colorPrimary">
        </android.support.v4.view.ViewPager>

        <!--Tulisan Kategori-->
        <TextView
            android:id="@+id/tv_tulisanKategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/kategori"
            android:textColor="@color/colortext"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--konten kategori-->
        <LinearLayout
            android:id="@+id/LL_konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <!--Baris pertama-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:paddingRight="5dp"
                android:paddingLeft="8dp"
                android:layout_marginBottom="5dp">

                <!--Kategori 1-->
                <LinearLayout
                    android:id="@+id/kategori1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/potographyfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fotografi"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>

                <!--Kategori 2-->
                <LinearLayout
                    android:id="@+id/kategori2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/kendaraanfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kendaraan"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>

                <!--Kategori 3-->
                <LinearLayout
                    android:id="@+id/kategori3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/gamesfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permainan"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>


            </LinearLayout>

            <!--Baris kedua-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:paddingRight="5dp"
                android:paddingLeft="8dp"
                android:layout_marginBottom="5dp">

                <!--Kategori 4-->
                <LinearLayout
                    android:id="@+id/kategori4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/outdoorfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/peralatan_outdoor"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>

                <!--Kategori 5-->
                <LinearLayout
                    android:id="@+id/kategori5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/fashionfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fashion"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>

                <!--Kategori 6-->
                <LinearLayout
                    android:id="@+id/kategori6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/otherfix"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lain_lain"
                        android:textSize="10sp"
                        android:textColor="@color/colortext"
                        android:gravity="center"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <!--Tulisan Rekomendasi-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/rekomendasi_barang"
            android:textColor="@color/colortext"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--tempat konten rekomendasi-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/white">

            <!--konten rekomendasi-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/konten_rekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clipToPadding="false"
                android:scrollbars="vertical" />

        </RelativeLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>